# difflut

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  FINAL_DOCUMENTATION_VERIFICATION.md  LICENSE  MANIFEST.in  README.md  __init__.py  build_extensions.py  convolutional_lut.ipynb  convolutional_lut.py  difflut.def  pyproject.toml  pytest.ini  requirements.txt  run_container.sh  run_container_local.sh  setup.py  test_gradient_flow.py  test_import.py
.github/: CICD_SETUP.md  GITHUB_GUIDE.md  README.md  pull_request_template.md
.github/workflows/: format.yml  pr-checks.yml  release.yml  tests.yml  version-management.yml
apptainer/: README.md  build_container.sh  difflut.def  run_container.sh  test_import.py
difflut/: __init__.py  constants.py  registry.py
difflut/blocks/: __init__.py  base_block.py  block_config.py  convolutional.py
difflut/encoder/: __init__.py  advanced_encoders.py  base_encoder.py  encoder_config.py  thermometer.py
difflut/heads/: __init__.py  groupsum.py
difflut/layers/: __init__.py  base_layer.py  convolutional.py  grouped_layer.py  layer_config.py  learnable_layer.py  random_layer.py  residual_layer.py
difflut/models/: MODEL_USAGE_GUIDE.md  README.md  __init__.py  base_model.py  cifar10.py  comparison.py  convolutional.py  factory.py  feedforward.py  mnist.py  model_config.py
difflut/nodes/: __init__.py  base_node.py  difflogic_node.py  dwn_node.py  dwn_stable_node.py  fourier_node.py  gradient_stabilized_node.py  hybrid_node.py  linear_lut_node.py  neurallut_node.py  node_config.py  polylut_node.py  probabilistic_node.py  probabilistic_stable_node.py  unbound_probabilistic_node.py  warp_node.py
difflut/utils/: __init__.py  cuda_utils.py  modules.py  regularizers.py  warnings.py
docs/: DEVELOPER_GUIDE.md  DOCUMENTATION_STRUCTURE.md  INSTALLATION.md  MODEL_ZOO.md  QUICK_START.md  USER_GUIDE.md
docs/DEVELOPER_GUIDE/: contributing.md  creating_components.md  github_guide.md  packaging.md  tests.md
docs/USER_GUIDE/: components.md  export_guide.md  fpga_export.md  registry_pipeline.md
examples/: adaptive_layer_demo.py  demo_probabilistic_random.py  mnist_difflut_tutorial.ipynb  model_system_example.py  probabilistic_stable_training.py  test_fourier_cuda.py  test_fourier_node.py  test_hybrid_node.py
tests/: INPUT_BASED_REGULARIZATION_SUMMARY.md  QUICK_START_INPUT_BASED_REG.md  README.md  REGULARIZER_IMPROVEMENT_PROPOSAL.md  REGULARIZER_SKIP_ANALYSIS.md  REORGANIZATION_SUMMARY.md  __init__.py  conftest.py  debug_gpu_consistency.py  run_all_tests.py  test_all_layers_nodes_classification.py  test_all_nodes_training.py  test_convolutional_learning.py  test_encoders_forward_pass.py  test_fused_kernels.py  test_gradient_flow.py  test_grouped_convolutional_connections.py  test_layers_forward_pass.py  test_model_training.py  test_nodes_forward_pass.py  test_probabilistic_stable_node.py  test_registry_validation.py  test_simple_probabilistic_random.py  test_utils.py  test_utils_modules.py  testing_utils.py  verify_dwn_range.py
tests/test_blocks/: __init__.py  test_block_functionality.py  test_convolutional_learning.py  test_grouped_convolutional_connections.py  test_train_grouped_connections.py
tests/test_encoders/: __init__.py  test_encoder_functionality.py  test_encoders_forward_pass.py
tests/test_heads/: test_groupsum.py
tests/test_layers/: __init__.py  test_convolutional_learning.py  test_fused_kernels.py  test_grouped_convolutional_connections.py  test_layer_functionality.py  test_layers_forward_pass.py  test_train_grouped_connections.py
tests/test_models/: test_convolutional.py  test_feedforward.py  test_model_zoo.py
tests/test_nodes/: README.md  test_initializers.py  test_node_combined_features.py  test_node_functionality.py  test_node_initializer_integration.py  test_node_regularizer_integration.py  (+4 more)
(+49 files in other folders)
