# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[build-system.cmake.cmake-minimum-required]
version = "3.15"

[project]
name = "difflut"
version = "1.0.10"
description = "Differentiable LUT-based neural networks"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Simon Buehrer"}
]

dependencies = [
    "torch>=1.9.0",
    "numpy",
]

[tool.setuptools]
# Optimize build caching
py-modules = []
include-package-data = true

[tool.ccache]
# Enable ccache for faster rebuilds if available
enabled = true
max_size = "5G"
